initialized section 16 project

--- a/Section 16 - Sending Emails/.vscode/launch.json
+++ b/Section 16 - Sending Emails/.vscode/launch.json
@@ -9,7 +9,7 @@
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/Section 14 - Sessions & Cookies",
+      "program": "${workspaceFolder}/Section 15 - Adding Authentication",
       "restart": true,
       "runtimeExecutable": "nodemon",
       "console": "integratedTerminal"
