--- a/Section 16 - Sending Emails/package.json
+++ b/Section 16 - Sending Emails/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
@@ -26,6 +27,8 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
+    "nodemailer": "^6.7.5",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
