--- a/Section 20 - File Upload & Download/.vscode/launch.json
+++ b/Section 20 - File Upload & Download/.vscode/launch.json
@@ -9,7 +9,7 @@
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/Section 19 - Error Handling",
+      "program": "${workspaceFolder}/Section 20 - File Upload & Download",
       "restart": true,
       "runtimeExecutable": "nodemon",
       "console": "integratedTerminal"
